unhide the oher parts and push

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        
     </header>
     <main>
-        <div class="popular hide">
+        <div class="popular">
             <div>
                 <h2 class="our">Our Popular Tours</h2>
             <p class="tour">Tourism is travel for pleasure, and the commercial activity of providing and supporting such travel.</p>
@@ -91,7 +91,7 @@
                </div>
             
             </section> -->
-            <section class="destination hide">
+            <section class="destination ">
                 <div>
                     <h2 class="our-2">Choose Your Destination</h2>
                     <p class="tour-2">You can enjoy your vacation on your wish..Trust  and choose us for your upcomings vacation.Choose the destination and live the life</p>
@@ -112,7 +112,7 @@
                 </div>
                </div>
             </section>
-            <section class="choose hide">
+            <section class="choose ">
                 <h2 class="our-2">Why Choose Us</h2>
                 <p class="tour-2">a traveling around from place to place. a long journey including the visiting of a number of places in sequence, especially with an organized group led by a guide.</p>
                 <div class="hotel">
